Fix - static blur and flicker size should properly reflect the range; reduce motion shouldn't set flicker animation light size to 0.

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -8048,10 +8048,10 @@ button.journal-view-button.journal-button {
 /*light/aura animations*/
 [data-animation='static-blur-fx'] .islight,
 .aura-element[data-animation='static-blur-fx']{
-    --light1-blur-size: calc(var(--radius) * 0.9);
-    --light2-blur-size: calc(var(--radius) * 1.1);
-    --transparency-blur-size: calc(var(--radius) * 1.9);
-    background-image: radial-gradient(var(--color1) var(--light1-blur-size), var(--color2) var(--light2-blur-size), transparent var(--transparency-blur-size)) !important;
+    --light1-blur-size: calc(var(--radius1) * 0.8);
+    --light2-blur-size: calc(var(--radius2) * 0.8);
+    --transparency-blur-size: calc(var(--light2-blur-size) * 1.2);
+    background-image: radial-gradient(var(--color1) var(--light1-blur-size), var(--color2) calc(var(--light1-blur-size) * 1.3) var(--light2-blur-size), transparent var(--transparency-blur-size)) !important;
 }
 
 [data-animation='static-blur-fx'] .darkvision{
@@ -8060,14 +8060,19 @@ button.journal-view-button.journal-button {
 
 [data-animation='flicker-fx'] .islight,
 .aura-element[data-animation='flicker-fx']{
-    --light1-blur-size: calc(var(--radius) * var(--light1-blur-size-animated));
-    --light2-blur-size: calc(var(--radius) * var(--light2-blur-size-animated));
-    --transparency-blur-size: calc(var(--radius) * var(--transparency-blur-size-animated));
+    --light1-blur-size: calc(var(--radius1) * var(--light1-blur-size-animated));
+    --light2-blur-size: calc(var(--radius2) * var(--light2-blur-size-animated));
+    --transparency-blur-size: calc(var(--light2-blur-size) * var(--transparency-blur-size-animated));
     opacity: 0.7;
     animation: aurafx-flicker 2s infinite alternate linear(1.22 -19.85%, 0.93 -0.74%, 0.46 13.24%, 0.71 34.56%, 0.46 58.82%, 0.74 70.59%, 1 100%);
-    background-image: radial-gradient(var(--color1) var(--light1-blur-size), var(--color2) var(--light2-blur-size), transparent var(--transparency-blur-size)) !important;
+    background-image: radial-gradient(var(--color1) var(--light1-blur-size), var(--color2) calc(var(--light1-blur-size) * 1.3) var(--light2-blur-size), transparent var(--transparency-blur-size)) !important;
 }
-
+.reduceMovement [data-animation='flicker-fx'] .islight,
+.reduceMovement .aura-element[data-animation='flicker-fx']{
+    --light1-blur-size: calc(var(--radius1) * 0.8);
+    --light2-blur-size: calc(var(--radius2) * 0.8);
+    --transparency-blur-size: calc(var(--light2-blur-size) * 1.2);
+}
 
 [data-animation='rays-fx'] .islight:after,
 .aura-element[data-animation='rays-fx'][id*='aura_']:after{
@@ -8407,18 +8412,18 @@ button.journal-view-button.journal-button {
 }
 @property --light1-blur-size-animated {
   syntax: '<number>'; /* <- defined as type number for the transition to work */
-  initial-value: 0;
+  initial-value: 1;
   inherits: false;
 }
 
 @property --light2-blur-size-animated{
   syntax: '<number>'; /* <- defined as type number for the transition to work */
-  initial-value: 0;
+  initial-value: 1;
   inherits: false;
 }
 @property --transparency-blur-size-animated{
   syntax: '<number>'; /* <- defined as type number for the transition to work */
-  initial-value: 0;
+  initial-value: 1;
   inherits: false;
 }
 @property --opacity{
@@ -8429,13 +8434,13 @@ button.journal-view-button.journal-button {
 @keyframes aurafx-flicker{
       0% { 
         --light1-blur-size-animated: 0.7;
-        --light2-blur-size-animated: 1;
-        --transparency-blur-size-animated: 1.6;
+        --light2-blur-size-animated: 0.8;
+        --transparency-blur-size-animated: 1.2;
       }
       100% {
-        --light1-blur-size-animated: 0.9;
-        --light2-blur-size-animated: 1.2;
-        --transparency-blur-size-animated: 1.8;
+        --light1-blur-size-animated: 0.8;
+        --light2-blur-size-animated: 0.8;
+        --transparency-blur-size-animated: 1.3;
       }
 }
 @keyframes aurafx-rotate{
